# aoc-2024

./: .gitignore  CMakeLists.txt  README.md  create-all-days.sh  create-day.py
src/: util.hpp
src/day-01/: main.cpp
src/day-02/: main.cpp
src/day-03/: main.cpp
src/day-04/: main.cpp
src/day-05/: main.cpp
src/day-06/: main.cpp
src/day-07/: main.cpp
src/day-08/: main.cpp
src/day-09/: main.cpp
src/day-10/: main.cpp
src/day-11/: main.cpp
src/day-12/: main.cpp
src/day-13/: main.cpp
src/day-14/: main.cpp
src/day-15/: main.cpp
src/day-17/: main.cpp
src/day-18/: main.cpp
